refactor: Clean and optimize e-signature module (backend + frontend)
Backend:
- Extract shared UserDisplayUtils and HttpRequestUtils to util package
- Remove duplicated getFullName() from 4 services (ContractService,
  ContractESignatureService, ContractTemplateService, ContractAmendmentService)
- Remove duplicated getClientIpAddress() from 3 controllers
- Remove try/catch in controllers - let GlobalExceptionHandler handle exceptions
- Replace RuntimeException with proper typed exceptions in SignatureService
- Replace RuntimeException with EmailSendException in SmtpEmailService
- Fix HTML injection in ContractAmendmentService (escape user input)
- Fix BigDecimal formatting in amendment PDF (use locale formatting)
- Extract SignContractRequest DTO from inner class to proper package
- Add @Valid annotation on public sign endpoint

Frontend:
- Deduplicate SignatureRequestStatus enum (was in 2 model files)
- Align SignatureRequestResponse with backend (add missing fields)
- Fix memory leak: revoke PDF objectURL on component destroy
- Add takeUntil for queryParams subscription cleanup
- Improve error handling with HTTP status-specific messages (401, 410, 404)

https://claude.ai/code/session_01RP9SVuaZ6H3a7zyatNHsue